--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -1083,12 +1083,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert to numpy\n",
+    "y_ros_array = y_ros.to_numpy().ravel()\n",
+    "\n",
+    "start = time()\n",
+    "grid_search.fit(X_ros, y_ros_array)\n",
+    "   \n",
+    "print(\"Model training took %.2f seconds\"\n",
+    "    % ((time() - start)))\n",
+    "print(\"Best cross-validation score: {:.2f}\".format(grid_search.best_score_))\n",
+    "print(\"Test set score: {:.2f}\".format(grid_search.score(X_test_imp, y_test)))\n",
+    "print(\"Best parameters: {}\\n\".format(grid_search.best_params_))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1102,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
