--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -1080,55 +1080,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_ros' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-b3b5b5cd6476>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Convert to numpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0my_ros_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_ros\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgrid_search\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_ros\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_ros_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_ros' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert to numpy\n",
-    "y_ros_array = y_ros.to_numpy().ravel()\n",
-    "\n",
-    "start = time()\n",
-    "grid_search.fit(X_ros, y_ros_array)\n",
-    "   \n",
-    "print(\"Model training took %.2f seconds\"\n",
-    "    % ((time() - start)))\n",
-    "print(\"Best cross-validation score: {:.2f}\".format(grid_search.best_score_))\n",
-    "print(\"Test set score: {:.2f}\".format(grid_search.score(X_test_imp, y_test)))\n",
-    "print(\"Best parameters: {}\\n\".format(grid_search.best_params_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
+      "[main c28d361] commend\n",
+      " 1 file changed, 75 insertions(+)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Assignment 6.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
      ]
     }
    ],
@@ -1138,14 +1106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "To https://github.com/Basirulislam/Assignment-6.git\n",
+      "   fdaf122..c28d361  main -> main\n"
      ]
     }
    ],
