--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -22,6 +22,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install imblearn --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from time import time\n",
+    "\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from impyute.imputation.cs import mice\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer\n",
+    "\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "from numpy import where\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import f1_score\n",
+    "pd.options.mode.chained_assignment = None  # default='warn' "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [
@@ -143,9 +183,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "#Load the dataset into a pandas dataframe\n",
     "url = 'http://archive.ics.uci.edu/ml/machine-learning-databases/yeast/yeast.data'\n",
     "yeast_data = pd.read_fwf(url,header= None)\n",
@@ -1095,6 +1132,50 @@
     "print(\"Best cross-validation score: {:.2f}\".format(grid_search.best_score_))\n",
     "print(\"Test set score: {:.2f}\".format(grid_search.score(X_test_imp, y_test)))\n",
     "print(\"Best parameters: {}\\n\".format(grid_search.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 5187592] test\n",
+      " 1 file changed, 15 insertions(+), 3 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Assignment 6.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git commit -am \"test\" \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git push"
    ]
   }
  ],
