--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -73,6 +73,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.utils.fixes import loguniform\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "from numpy import where\n",
     "import matplotlib.pyplot as plt\n",
@@ -793,27 +794,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: imblearn in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.0)\n",
-      "Requirement already satisfied: imbalanced-learn in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imblearn) (0.8.1)\n",
-      "Requirement already satisfied: scikit-learn>=0.24 in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imbalanced-learn->imblearn) (1.7.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from imbalanced-learn->imblearn) (1.17.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\alext\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn>=0.24->imbalanced-learn->imblearn) (3.0.0)\n",
       "195 new random picked points\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "ros = RandomOverSampler()\n",
     "X_ros, y_ros = ros.fit_resample(X_train_imp, y_train)\n",
     "\n",
@@ -822,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -867,17 +859,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training took 2.64 seconds\n",
-      "Best cross-validation score: 0.83\n",
-      "Test set score: 0.92\n",
-      "Best parameters: {'classifier': SVC(C=1500, gamma=1), 'classifier__C': 1500, 'classifier__gamma': 1}\n",
+      "Model training took 2.85 seconds\n",
+      "Best cross-validation score: 0.81\n",
+      "Test set score: 0.90\n",
+      "Best parameters: {'classifier': SVC(C=1250, gamma=1), 'classifier__C': 1250, 'classifier__gamma': 1}\n",
       "\n"
      ]
     }
@@ -898,27 +890,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training took 2.62 seconds\n",
+      "Random over-sampling:\n",
+      "9  \n",
+      "0.0    344\n",
+      "1.0    344\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "smote = SMOTE(sampling_strategy='minority')\n",
+    "X_sm, y_sm = smote.fit_resample(X_train_imp, y_train)\n",
+    "# Convert to numpy\n",
+    "y_sm_array = y_ros.to_numpy().ravel() \n",
+    "# Divide by class\n",
+    "df_class_0 = y_sm[y_sm == 0]\n",
+    "df_class_1 = y_sm[y_sm == 1]\n",
+    "\n",
+    "df_test_over = pd.concat([df_class_0, df_class_1], axis=0)\n",
+    "\n",
+    "print('Random over-sampling:')\n",
+    "print(df_test_over.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model training took 2.73 seconds\n",
       "Best cross-validation score: 0.83\n",
-      "Test set score: 0.92\n",
+      "Test set score: 0.84\n",
       "Best parameters: {'classifier': SVC(C=1500, gamma=1), 'classifier__C': 1500, 'classifier__gamma': 1}\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Convert to numpy\n",
-    "y_ros_array = y_ros.to_numpy().ravel()\n",
-    "\n",
     "start = time()\n",
-    "grid_search.fit(X_ros, y_ros_array)\n",
+    "grid_search.fit(X_sm, y_sm_array)\n",
     "   \n",
     "print(\"Model training took %.2f seconds\"\n",
     "    % ((time() - start)))\n",
@@ -929,11 +952,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model training took 2.65 seconds\n",
+      "Best cross-validation score: 0.83\n",
+      "Test set score: 0.83\n",
+      "Best parameters: {'classifier': SVC(C=1500, gamma=1), 'classifier__C': 1500, 'classifier__gamma': 1}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#! git commit -am \"test\" \n",
+    "from imblearn.combine import SMOTETomek\n",
+    "\n",
+    "smt = SMOTETomek(sampling_strategy='auto')\n",
+    "X_smt, y_smt = smt.fit_resample(X_train_imp, y_train)\n",
+    "# Convert to numpy array\n",
+    "y_smt_array = y_smt.to_numpy().ravel() \n",
+    "\n",
+    "start = time()\n",
+    "grid_search.fit(X_smt, y_smt_array)\n",
+    "   \n",
+    "print(\"Model training took %.2f seconds\"\n",
+    "    % ((time() - start)))\n",
+    "print(\"Best cross-validation score: {:.2f}\".format(grid_search.best_score_))\n",
+    "print(\"Test set score: {:.2f}\".format(grid_search.score(X_test_imp, y_test)))\n",
+    "print(\"Best parameters: {}\\n\".format(grid_search.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main d635380] test"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in Assignment 6.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 1 file changed, 291 insertions(+), 523 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git commit -am \"test\" \n",
     " \n"
    ]
   },
