--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -1054,6 +1054,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At first we have created the NaN values as requsted then we fill the NaN Imputation method(KNNImputer(n_neighbors=5, weights=\"uniform\"),Then we have trained our first model (Best parameters: {'classifier': SVC(C=1250, gamma=1), 'classifier__C': 1250, 'classifier__gamma': 1}, CV score was 97% and test set score was 96%. Afte that we have tested many different outlier method (OneClassSVM(gamma=1, nu=0.05) and the score was 44%. And finally we can say we have tried differnt over sampling but score did not improve acctually. The best score comes from the random over sampling \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -1091,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1105,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
