--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -21,9 +21,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Group members: 1.Basirul Islam(islambas@arcada.fi)  2.Alexandros Touvras(touvrasa@arcada.fi) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1057,21 +1066,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first we have created the NaN values as requsted then we fill the NaN Imputation method(KNNImputer(n_neighbors=5, weights=\"uniform\"),Then we have trained our first model (Best parameters: {'classifier': SVC(C=1250, gamma=1), 'classifier__C': 1250, 'classifier__gamma': 1}, CV score was 97% and test set score was 96%. Afte that we have tested many different outlier method (OneClassSVM(gamma=1, nu=0.05) and the score was 44%. And finally we can say we have tried differnt over sampling but score did not improve acctually. The best score comes from the random over sampling \n",
+    "At first we have created the NaN values as requsted then we fill the NaN Imputation method(KNNImputer(n_neighbors=5, weights=\"uniform\"),Then we have trained our first model (Best parameters: {'classifier': SVC(C=1250, gamma=1), 'classifier__C': 1250, 'classifier__gamma': 1}, CV score was 97% and test set score was 96%. Afte that we have tested many different outlier method (OneClassSVM(gamma=1, nu=0.05) and the score was 44%. And finally we can say we have tried differnt over sampling but score did not improve acctually. The best score comes from the random over sampling and the score was 15%\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 628cba5] coding finished\n",
-      " 1 file changed, 124 insertions(+), 155 deletions(-)\n"
+      "[main 868cb15] coding finished"
      ]
     },
     {
@@ -1081,6 +1089,14 @@
       "warning: LF will be replaced by CRLF in Assignment 6.ipynb.\n",
       "The file will have its original line endings in your working directory\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 1 file changed, 10 insertions(+), 2 deletions(-)\n"
+     ]
     }
    ],
    "source": [
@@ -1089,12 +1105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/Basirulislam/Assignment-6\n",
+      "   b6b807e..868cb15  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "! git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
