--- a/Assignment 6.ipynb
+++ b/Assignment 6.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Group members: 1.Basirul Islam(islambas@arcada.fi)  2.Alexandros Touvras(touvrasa@arcada.fi) "
+    "### Group members: 1. Basirul Islam   2. Alexandros Touvras "
    ]
   },
   {
@@ -1072,14 +1072,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 868cb15] coding finished"
+      "[main 8245a11] coding finished\n"
      ]
     },
     {
@@ -1094,8 +1094,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " 1 file changed, 10 insertions(+), 2 deletions(-)\n"
+      " 1 file changed, 39 insertions(+), 7 deletions(-)\n"
      ]
     }
    ],
@@ -1105,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1112,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/Basirulislam/Assignment-6\n",
-      "   b6b807e..868cb15  main -> main\n"
+      "   868cb15..8245a11  main -> main\n"
      ]
     }
    ],
